<resources>
    <string name="app_name">ReclameApp</string>
    <string name="txtDoc">Documento</string>
    <string name="txtSlogan">Apoiando a Solução</string>
    <string name="txtPassword">Senha</string>
    <string name="txtLogin">Entrar</string>
    <string name="txtNoRegister">Não tem cadastro?</string>
    <string name="txtSignUp">Cadastre-se</string>
    <string name="txtName">Nome</string>
    <string name="txtDescription">Descrição</string>
    <string name="txtEdit">Editar</string>
    <string name="txtDelete">Apagar</string>
    <string name="txtCreate">Cadastrar</string>
    <string name="txtChangeLang">Trocar Idioma</string>
    <string name="txtCrudTip">Selecione um item da lista para editá-lo ou apagá-lo</string>
    <string name="txtTakePic">Tirar a Foto</string>
    <string name="txtSync">Sincronizar</string>
    <string name="txtSelectLangtText">Selecione o idioma do sistema</string>
    <string name="txtPt">Português</string>
    <string name="txtEn">Inglês</string>
    <string name="txtEs">Espanhol</string>
    <string name="txtFr">Francês</string>
    <string name="txtDe">Alemão</string>
    <string name="txtRu">Russo</string>
    <string name="txtOk">OK</string>
    <string name="txtSuccessRegister">Cadastrado com sucesso!</string>
    <string name="txtFailLogin">Senha ou usuário incorreto</string>
    <string name="txtError">Erro</string>
    <string name="txtSuccessEdit">Editado com sucesso!</string>
    <string name="txtSuccessDelete">Removido com sucesso!</string>
    <string name="txtSuccessSync">Sincronizado com sucesso!</string>
    <string name="txtComplaints">Reclamações</string>
    <string name="txtSuccessCreate">Reclamação salva com sucesso!</string>
    <string name="txtDayHour">Dia/Hora</string>
    <string name="txtStatus">Status</string>
</resources>