<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    tools:context=".LanguageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goBack"
                app:srcCompat="@drawable/backicon" />

            <Space
                android:layout_width="48dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/txtAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtSlogan"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />
            </LinearLayout>

            <Space
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSelectLangtText"
                android:textColor="#D1D1D1" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeLang"
                android:tag="pt"
                android:text="@string/txtPt" />

            <Button
                android:id="@+id/en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeLang"
                android:tag="en"
                android:text="@string/txtEn" />

            <Button
                android:id="@+id/es"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeLang"
                android:tag="es"
                android:text="@string/txtEs" />

            <Button
                android:id="@+id/fr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeLang"
                android:tag="fr"
                android:text="@string/txtFr" />

            <Button
                android:id="@+id/de"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeLang"
                android:tag="de"
                android:text="@string/txtDe" />

            <Button
                android:id="@+id/ru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeLang"
                android:tag="ru"
                android:text="@string/txtRu" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>