<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    tools:context=".ListActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls"
        android:verticalScrollbarPosition="defaultPosition"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goBack"
                app:srcCompat="@drawable/logouticon" />

            <Space
                android:layout_width="48dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/txtAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtSlogan"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />
            </LinearLayout>

            <Space
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/edtDescriptionEdit"
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/txtDescription"
                android:inputType="textMultiLine"
                android:textColor="#FFFFFF"
                android:textColorHint="#C6C6C6" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnChangeLang"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="openChangeLang"
                android:text="@string/txtChangeLang"
                android:textSize="12sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="sync"
                android:text="@string/txtSync"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:onClick="openCreate"
                android:text="@string/txtCreate"
                android:textSize="12sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:onClick="update"
                android:text="@string/txtEdit"
                android:textSize="12sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:onClick="delete"
                android:text="@string/txtDelete"
                android:textSize="12sp" />

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCrudTip"
                android:textColor="#D1D1D1" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="360dp"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#65404040"
                android:cacheColorHint="#FFFFFF">

            </ListView>
        </TableRow>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>