<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    tools:context=".CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goBack"
                app:srcCompat="@drawable/backicon" />

            <Space
                android:layout_width="48dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/txtAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtSlogan"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />
            </LinearLayout>

            <Space
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnTakePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="capturaFoto"
                android:text="@string/txtTakePic" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/imageicon" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/edtDescriptionEdit"
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/txtDescription"
                android:inputType="textMultiLine"
                android:textColor="#FFFFFF"
                android:textColorHint="#C6C6C6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnCreateIssue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gravar"
                android:text="@string/txtCreate" />
        </TableRow>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>